<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.oregonstate.cs489.humphrmi.bestslopes.EditTrail">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_trail_name_hint"
        android:id="@+id/edit_trail_name"
        android:inputType="text|textCapWords|textAutoCorrect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_difficulty_image"
            android:maxHeight="41dp"
            android:maxWidth="41dp"
            android:src="@drawable/easy"
            android:adjustViewBounds="true"
            android:layout_marginRight="20dp"/>

        <!--TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/edit_difficulty_text"
            android:textSize="20sp"
            android:paddingLeft="10dp"/-->
        <RadioGroup
            android:id="@+id/edit_difficulty_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_difficulty_easy">

            <RadioButton
                android:id="@+id/radio_difficulty_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:paddingRight="10dp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_difficulty_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:paddingRight="10dp" />

            <RadioButton
                android:id="@+id/radio_difficulty_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult"
                android:paddingRight="10dp" />
        </RadioGroup>
    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edit_rating"
        android:numStars="5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
        android:gravity="top|left"
        android:hint="@string/edit_description_hint"
        android:lines="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_add_image"
        android:layout_gravity="center" />

    <HorizontalScrollView
        android:id="@+id/edit_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp">

    </HorizontalScrollView>
</LinearLayout>
